# claim_tool

./: README.md  docker-compose.yaml  pyproject.toml  ruff.toml
UI/: dbc1.py
requirements/: common.txt  dev.txt  integration.txt  vendor.txt
sources/: openai.py  settings.py  utilities.py
sources/commands/: manager.py
sources/database/: __init__.py  schema.py
sources/database/models/: __init__.py  claim.py  document.py  result.py
sources/integrations/: __init__.py  dummy.py
sources/server/: __init__.py
sources/server/endpoints/: __init__.py  claims.py  documents.py  models.py
sources/settings/: __init__.py  database.py  integrations.py
